# StatTron

./: .gitignore  Dockerfile  Makefile  README.md  StatTron.postman_collection.json  app.postman_collection.json  config-example.ini  config.ini  docker-compose-devdb.yaml  docker-compose.dev.yml  docker-compose.master.dev.yml  docker-compose.postgres.dev.yml  docker-compose.slave.dev.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup_logger.py
API/: Dockerfile  Makefile  database.py  models.py  schemas.py
Database/: alembic.ini  session.py  test.py
Database/DAL/: ChannelDAL.py  DALTest.py  MentionDAL.py  PostDAL.py  SubPerDayDAL.py
Database/Models/: ChannelModel.py  MentionModel.py  ModelTest.py  PostModel.py  SubPerDayModel.py  __init__.py
Database/migrations/: env.py
MasterNode/: Dockerfile  main.py
MasterNode/Handlers/: AdvertisingPostsCatalogHandlers.py  AdvertisingReturnsStatisticHandlers.py  ChannelStatisticsHandlers.py  MainPageHandlers.py  СhannelСatalogHandlers.py
MasterNode/Models/: AdvertisingPostsCatalogModels.py  AdvertisingReturnsStatisticModels.py  ChannelStatisticsModels.py  MainPageModels.py  СhannelСatalogModels.py
Test/: test_MasterNodeConf.py  test_MasterNodeHandlers.py
UserBot/: Dockerfile  Makefile  README.md  UserBot.py  requirements.txt  sql_app.db
app/: Dockerfile  app.py  cli.py  requirements.txt  routes.py  wsgi.py
client/: Dockerfile  __init__.py  api.py  cli.py  client.py  crud.py  requirements.txt
docs/: DATABASE.md  MasterNode.md  SlaveNode.md  TGBOT.md
frontend/: tmp.md
nginx/: Dockerfile  nginx.conf  ssl-params.conf
nginx-conf/: fastcgi.conf  gunicorn.service  gunicorn.socket  nginx.conf
(+74 files in other folders)
